--- a/static/less/webapp-theme.less
+++ b/static/less/webapp-theme.less
@@ -5,8 +5,8 @@
 // Charts colors
 @positive:                  #049cdb;
 @negative:                  #9d261d;
-@income:                    #46a546;
-@outgo:                     @negative;
+@renevues:                  #46a546;
+@expenses:                  @negative;
 
 // used in inputs, panels, tables
 @component-border-color:    #ccc;
