moving ga script

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,9 @@
     </div>
 
         {% block bodyend %}{% endblock bodyend %}
+        
+        {% include "ga.html" %}
+
         {% csrf_token %}
     </body>
 </html>
