--- a/static/less/balance.less
+++ b/static/less/balance.less
@@ -18,14 +18,6 @@ div.balance-info {
             }
         }
 
-        &.income {
-            color: @income;
-        }
-
-        &.outgo {
-            color: @outgo;
-        }
-
         &.total {
             .value {
                 font-size: 20px;
@@ -54,11 +46,9 @@ div.balance-info {
     }
 }
 
-p {
-    &.income {
-        color: @income;
-    }
-    &.outgo {
-        color: @outgo;
-    }
+.income {
+    color: @income;
+}
+.outgo {
+    color: @outgo;
 }
