--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -288,3 +288,17 @@ thead tr th {
 hr {
     border-color: @gray;
 }
+
+.value-column {
+    border-right-width: 3px;
+    border-right-style: solid;
+    border-right-color: @gray-lighter;
+
+    &-income {
+        border-right-color: @income;
+    }
+
+    &-outgo {
+        border-right-color: @outgo;
+    }
+}
