--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -1,6 +1,6 @@
 @import "lib/bootstrap/bootstrap.less";
 @import "lib/typeahead.less";
-//@import "lib/datepicker.less";
+@import (less) "lib/datepicker.css";
 @import "variables.less";
 @import "webapp-theme.less";
 
