using local angular for debug

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -42,13 +42,17 @@
 
 {% if is_debug %}
 
+    {% comment %}
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.js"></script>
+    {% endcomment %}
 
     {% get_static_prefix as static_path %}
 
     {% with app=static_path|add:"js/app/" controllers=static_path|add:"js/app/controllers/" lib=static_path|add:"js/lib/" locales=static_path|add:"js/locales/" %}
 
+        <script src="{{lib}}min/angular.min.js"></script>
+        <script src="{{lib}}min/angular-resource.min.js"></script>
         <script src="{{lib}}angular-strap.js"></script>
         <script src="{{lib}}angular-ui-router.js"></script>
         <script src="{{lib}}highcharts.src.js"></script>
