--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7002,6 +7002,9 @@ a > i[class^="icon"] {
 form.transaction-form hr {
   margin: 10px 0;
 }
+form.transaction-form #id_value {
+  font-weight: bold;
+}
 .category-table tbody tr {
   cursor: pointer;
 }
