adding bootstrap-select

--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -2,6 +2,7 @@
     position: relative;
 
     i.input-icon-prepend, i.input-icon-append {
+        z-index: 10;
         position: absolute;
         bottom: (@padding-base-vertical + 1); //padding + border
     }
