--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -306,3 +306,26 @@ hr {
 #transaction-list-panel .transaction-table .action-bar > i.delete-transaction {
     color: @brand-danger;
 }
+
+.bootstrap-select {
+    width: 100% !important;
+    margin-bottom: 0 !important;
+
+    .btn.dropdown-toggle {
+        height: @input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+        font-size: @font-size-base !important;
+        line-height: @line-height-base !important;
+        color: @input-color !important;
+        background-color: @input-bg !important;
+        .box-shadow(inset 0 1px 1px rgba(0,0,0,.075)) !important;
+        .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s") !important;
+
+        // Customize the `:focus` state to imitate native WebKit styles.
+        .form-control-focus() !important;
+    }
+
+    .filter-option {
+        font-weight: normal;
+        margin-left: 20px !important;
+    }
+}
