--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -9,6 +9,7 @@
 {% block extrahead %}
 
 <link href="{% static "css/spectrum.css" %}" rel="stylesheet" media="screen">
+<link href="{% static "css/bootstrap-select.css" %}" rel="stylesheet" media="screen">
 
 {% endblock extrahead %}
 
@@ -62,6 +63,7 @@
         <script src="{{lib}}toastr.js"></script>
         <script src="{{lib}}bootstrap-typeahead.js"></script>
         <script src="{{lib}}min/moment.min.js"></script>
+        <script src="{{lib}}bootstrap-select.js"></script>
 
         <script src="{{locales}}angular-locale_pt-br.js"></script>
         <script src="{{locales}}bootstrap-datepicker.pt-BR.js"></script>
