--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7330,6 +7330,8 @@ hr {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s !important;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s !important;
+  text-transform: none;
+  font-family: "Oxygen", Helvetica, Arial, sans-serif;
 }
 .bootstrap-select .btn.dropdown-toggle:focus {
   border-color: #66afe9 !important;
