--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -319,9 +319,11 @@ hr {
         background-color: @input-bg !important;
         .box-shadow(inset 0 1px 1px rgba(0,0,0,.075)) !important;
         .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s") !important;
+        text-transform: none;
 
         // Customize the `:focus` state to imitate native WebKit styles.
         .form-control-focus() !important;
+        font-family: @font-family-sans-serif;
     }
 
     .filter-option {
