--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -16,8 +16,8 @@
 
 {% block webapp-menu %}
 <ul class="nav navbar-nav">
-    <li ng-class="{active: $state.includes('transactions')}"><a href="#/transactions">{% trans "Transactions" %}</a></li>
-    <li ng-class="{active: $state.includes('settings')}"><a href="#/settings">{% trans "Settings" %}</a></li>
+    <li ng-class="{active: $state.includes('transactions')}"><a href="/transactions">{% trans "Transactions" %}</a></li>
+    <li ng-class="{active: $state.includes('settings')}"><a href="/settings">{% trans "Settings" %}</a></li>
 </ul>
 {% endblock webapp-menu %}
 
