removing html5 mode for now

--- a/templates/webapp/settings/settings.html
+++ b/templates/webapp/settings/settings.html
@@ -6,9 +6,9 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <ul class="nav nav-list" id="settings-menu">
-                <li ng-class="{active: $state.includes('settings.categories')}"><a href="/settings/categories">{% trans "Categories" %}</a></li>
+                <li ng-class="{active: $state.includes('settings.categories')}"><a href="#/settings/categories">{% trans "Categories" %}</a></li>
                 {% comment %}
-                <li ng-class="{active: $state.includes('settings.reminders')}"><a href="/settings/reminders">{% trans "Reminders" %}</a></li>
+                <li ng-class="{active: $state.includes('settings.reminders')}"><a href="#/settings/reminders">{% trans "Reminders" %}</a></li>
                 {% endcomment %}
             </ul>
         </div>
