--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -29,3 +29,34 @@
 i.input-error {
     color: @state-danger-text;
 }
+
+form.transaction-form {
+    hr {
+        margin: 10px 0;
+    }
+}
+
+.bootstrap-select {
+    width: 100% !important;
+    margin-bottom: 0 !important;
+
+    .btn.dropdown-toggle {
+        height: @input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+        font-size: @font-size-base !important;
+        line-height: @line-height-base !important;
+        color: @input-color !important;
+        background-color: @input-bg !important;
+        .box-shadow(inset 0 1px 1px rgba(0,0,0,.075)) !important;
+        .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s") !important;
+        text-transform: none;
+
+        // Customize the `:focus` state to imitate native WebKit styles.
+        .form-control-focus() !important;
+        font-family: @font-family-sans-serif;
+    }
+
+    .filter-option {
+        font-weight: normal;
+        margin-left: 20px !important;
+    }
+}
