--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -1,13 +1,16 @@
 @import "lib/bootstrap/bootstrap.less";
 @import "lib/typeahead.less";
 @import (less) "lib/datepicker.css";
+@import "datepicker-override.less";
+
 @import "variables.less";
 @import "webapp-theme.less";
-
-
-/*
- * OVERRIDES
- */
+@import "presentation.less";
+@import "category-list.less";
+@import "settings.less";
+@import "balance.less";
+@import "charts.less";
+@import "forms.less";
 
 .left-column {
     .make-sm-column(5);
@@ -29,15 +32,6 @@
     .make-lg-column(3);
 }
 
-.datepicker {
-    border: 1px solid @input-border;
-	border-radius: @border-radius-base !important;
-
-    td, th, .active, .today, tr > td > span {
-        border-radius: @border-radius-base !important;
-    }
-}
-
 .btn {
     text-transform: uppercase;
 
@@ -49,24 +43,6 @@
 a > i[class^="icon"] {
     margin-left: 5px;
 }
-
-/*
- * /OVERRIDES
- */
-
-@import "presentation.less";
-@import "transaction-form.less";
-@import "category-list.less";
-@import "settings.less";
-@import "balance.less";
-@import "charts.less";
-@import "forms.less";
-/*
-*/
-
-/*
- * GLOBAL STYLES
- */
 
 /* 
   Allow angular.js to be loaded in body, hiding cloaked elements until 
@@ -233,10 +209,6 @@ thead tr th {
     margin-bottom: 25px;
 }
 
-.datepicker {
-    background-color: @input-bg;
-}
-
 // fixing color on navbar dropdown item hover 
 .navbar-nav li.dropdown {
     > ul.dropdown-menu > li > a:hover {
@@ -261,9 +233,6 @@ thead tr th {
     font-family: @font-family-custom-panel;
 }
 
-.datepicker:before {
-    visibility: hidden;
-}
 
 .modal {
     .modal-header {
@@ -307,27 +276,3 @@ hr {
     color: @brand-danger;
 }
 
-.bootstrap-select {
-    width: 100% !important;
-    margin-bottom: 0 !important;
-
-    .btn.dropdown-toggle {
-        height: @input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
-        font-size: @font-size-base !important;
-        line-height: @line-height-base !important;
-        color: @input-color !important;
-        background-color: @input-bg !important;
-        .box-shadow(inset 0 1px 1px rgba(0,0,0,.075)) !important;
-        .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s") !important;
-        text-transform: none;
-
-        // Customize the `:focus` state to imitate native WebKit styles.
-        .form-control-focus() !important;
-        font-family: @font-family-sans-serif;
-    }
-
-    .filter-option {
-        font-weight: normal;
-        margin-left: 20px !important;
-    }
-}
