starting new chart and changing bg color

--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -1,7 +1,19 @@
 {% load i18n %}
 
-<div class="column-md-12">
-    <div class="well" ng-controller="ReportsCtrl">
-        <div value='balanceData' type="area" height="300" chart></div>
+<div class="row">
+    <div class="col-md-12" ng-controller="ReportsCtrl">
+        <div value='balanceData' type="area" height="300" chart class="well"></div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="well">
+        </div>
     </div>
 </div>
