--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -1,19 +1,26 @@
 {% load i18n %}
 
-<div class="row">
-    <div class="col-md-12" ng-controller="ReportsCtrl">
-        <div value='balanceData' type="area" height="300" chart class="well"></div>
-    </div>
-</div>
+<div ng-controller="ReportsCtrl">
+    <h4 class="area-header">{% trans "Reports" %}</h4>
 
-<div class="row">
-    <div class="col-md-6">
-        <div class="well">
+    <div class="row report-options">
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div value='balanceData' type="area" height="300" chart class="well"></div>
         </div>
     </div>
 
-    <div class="col-md-6">
-        <div class="well">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="well">
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="well">
+            </div>
         </div>
     </div>
 </div>
