--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <div class="well">
+            <div value='top10Data' type="area" height="300" chart class="well"></div>
             </div>
         </div>
 
