--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -25,7 +25,7 @@
 
 {% block body %}
 
-<div class="row" ui-view>
+<div class="row" ui-view role="transactions">
 </div>
 
 <script type="text/ng-template" id="transaction-list.html">
