renaming controllers to dash case

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -75,16 +75,15 @@
         <script src="{{locales}}pt-br.js"></script>
 
         <script src="{{app}}app.js"></script>
-        <script src="{{controllers}}BalancePanelCtrl.js"></script>
-        <script src="{{controllers}}BalancePanelCtrl.js"></script>
-        <script src="{{controllers}}RemindersCtrl.js"></script>
-        <script src="{{controllers}}TransactionActionBarCtrl.js"></script>
-        <script src="{{controllers}}TransactionFormCtrl.js"></script>
-        <script src="{{controllers}}TransactionListCtrl.js"></script>
-        <script src="{{controllers}}CategoryListCtrl.js"></script>
-        <script src="{{controllers}}CategoryEditCtrl.js"></script>
-        <script src="{{controllers}}ReminderListCtrl.js"></script>
-        <script src="{{controllers}}ReportsCtrl.js"></script>
+        <script src="{{controllers}}balance-panel-ctrl.js"></script>
+        <script src="{{controllers}}reminders-ctrl.js"></script>
+        <script src="{{controllers}}transaction-action-bar-ctrl.js"></script>
+        <script src="{{controllers}}transaction-form-ctrl.js"></script>
+        <script src="{{controllers}}transaction-list-ctrl.js"></script>
+        <script src="{{controllers}}category-list-ctrl.js"></script>
+        <script src="{{controllers}}category-edit-ctrl.js"></script>
+        <script src="{{controllers}}reminder-list-ctrl.js"></script>
+        <script src="{{controllers}}reports-ctrl.js"></script>
 
         <script src="{{app}}services.js"></script>
         <script src="{{app}}modules/charts.js"></script>
