--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="col-md-6">
-            <div class="well">
+            <div value='categoryComparisonData' type="area" height="300" chart class="well"></div>
             </div>
         </div>
     </div>
