--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <script type="text/ng-template" id="transaction-list.html">
-{% include "webapp/transaction-list.html" %}
+{% include "webapp/transactions/transaction-list.html" %}
 </script>
 
 <script type="text/ng-template" id="settings.html">
