--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -18,13 +18,43 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6">
-            <div value='top10Data' type="area" height="300" chart class="well"></div>
+        <div class="col-md-6 well">
+            <div value='top10Data' type="area" height="300" chart></div>
             </div>
         </div>
 
-        <div class="col-md-6">
-            <div value='categoryComparisonData' type="area" height="300" chart class="well"></div>
+        <div class="col-md-6 well">
+
+            <div class="row">
+                <div class="col-md-6 category1 input-icon">
+                    <label for="category1" class="form-label">{% trans "Category 1" %}</label>
+                    <i class="icon-tag input-icon-prepend"></i>
+                    <select
+                        id="category1"
+
+                        ng-model="category1"
+                        category-field
+
+                        ng-options="c as c.name group by c.group for c in categories"
+                        >
+                    </select>
+                </div>
+                <div class="col-md-6 category2 input-icon">
+                    <label for="category2" class="form-label">{% trans "Category 2" %}</label>
+                    <i class="icon-tag input-icon-prepend"></i>
+                    <select
+                        id="category2"
+
+                        ng-model="category2"
+                        category-field
+
+                        ng-options="c as c.name group by c.group for c in categories"
+                        >
+                    </select>
+                </div>
+            </div>
+
+            <div value='categoryComparisonData' type="area" height="300" chart></div>
             </div>
         </div>
     </div>
