dont change date after creating a transaction

--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -45,6 +45,8 @@
             ng-model="formData.value"
             value-field
 
+            required
+
             autocomplete="off"
             placeholder="{% trans "Tip: use &quot;+&quot; for positive values" %}"
             />
