--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -12,15 +12,14 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12">
-            <div value='balanceData' type="area" height="400" chart class="well"></div>
+        <div class="col-md-12 well">
+            <div value='balanceData' type="area" height="400" chart class=""></div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-6 well">
             <div value='top10Data' type="area" height="300" chart></div>
-            </div>
         </div>
 
         <div class="col-md-6 well">
@@ -55,7 +54,6 @@
             </div>
 
             <div value='categoryComparisonData' type="area" height="300" chart></div>
-            </div>
         </div>
     </div>
 </div>
