grouping transactions by category

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -129,7 +129,6 @@ thead tr th {
 
         th.description-column-header {
             text-align: center;
-
         }
     }
 
@@ -263,12 +262,12 @@ hr {
     border-right-style: solid;
     border-right-color: @gray-lighter;
 
-    &-income {
-        border-right-color: @income;
+    &-renevue {
+        border-right-color: @renevues;
     }
 
-    &-outgo {
-        border-right-color: @outgo;
+    &-expense {
+        border-right-color: @expenses;
     }
 }
 
